Revert "Connection string, DBContext"
This reverts commit a9f7c47cad1002badda70496d44ac855490bceb9.

--- a/Eredar/Eredar/Eredar.csproj
+++ b/Eredar/Eredar/Eredar.csproj
@@ -46,12 +46,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.7\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
@@ -169,7 +163,7 @@
     <Compile Include="Models\Arhiva.cs" />
     <Compile Include="Models\Grad.cs" />
     <Compile Include="Models\Korisnici.cs" />
-    <Compile Include="Models\BazaContext.cs" />
+    <Compile Include="Models\LOGIN.cs" />
     <Compile Include="Models\Prijava.cs" />
     <Compile Include="Models\Vrste_prijava.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
