--- a/Eredar/Eredar/Eredar.csproj
+++ b/Eredar/Eredar/Eredar.csproj
@@ -200,7 +200,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\SistemAdministator\PregledKorisnika.cshtml" />
+    <Content Include="Views\Home\PregledKorisnika.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
