--- a/Eredar/Eredar/Eredar.csproj
+++ b/Eredar/Eredar/Eredar.csproj
@@ -201,6 +201,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\PregledKorisnika.cshtml" />
+    <Content Include="Views\Home\BrisanjePrijava.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
